# sentencepiece

./: .gitignore  .gitmodules  COPYRIGHT.md  Cargo.toml  README.md  build.rs  shell.nix  test.nix
.github/: dependabot.yml
.github/workflows/: lint.yml  rust.yml  test.yml
nix/: Cargo.nix  sources.json
scripts/: test-all.ps1  test-all.sh
sentencepiece/: Cargo.toml
sentencepiece-sys/: Cargo.toml  bindgen.sh  build.rs
sentencepiece-sys/src/: bindings.rs
sentencepiece-sys/src/ffi/: sentencepiece.cpp  sentencepiece.h
sentencepiece/src/: lib.rs  sentencepiece.rs
src/: bindgen.rs  lib.rs  sentencepiece.rs
