[package]
name = "sentencepiece-sys"
version = "0.1.1"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Binding for the sentencepiece tokenizer"
repository = "https://github.com/danieldk/sentencepiece.git"
license = "Apache-2.0"

[dependencies]

[build-dependencies]
cc = "1"
pkg-config = "0.3"
